# instamail

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
.claude/workflows/: email-to-instagram.js
docs/adr/: 0001-api-input-sheets-output-cursor-resume.md  0001-google-sheets-substrate-formula-resume.md  0001-output-csv-as-resume-journal.md  0001-search-driven-plugins-buffer-merge-write.md  0002-instagram-free-first-env-gated-providers.md  0002-token-efficient-agentic-resolve.md  0003-parallel-safe-claiming-sheet-lease-lock.md  0003-reverse-resolution-agentic-osint-workflow.md
docs/superpowers/plans/: 2026-06-17-instamail-osint-cli.md
docs/superpowers/specs/: 2026-06-17-instamail-osint-cli-design.md  2026-06-24-email-to-instagram-workflow-design.md
plugins/: instagram.py
plugins/instagram/: __init__.py  cache.py  config.py  contacts.py  harvester.py  http.py  lookup.py  metrics.py  pipeline.py  plugin.py  resolver.py
plugins/instagram/providers/: base.py  discovery.py  email.py  enrichment.py  registry.py  verify.py
plugins/instagram/tests/: test_cache.py  test_contacts.py  test_harvester.py  test_lookup.py  test_metrics.py  test_pipeline.py  test_plugin.py  test_providers.py  test_resolver.py
scripts/: claim.py  clean_emails.py  ig_profile.py  instagram_stats.py  persist.py  sheets_io.py  users_api.py
scripts/tests/: conftest.py  test_claim.py  test_ig_profile.py  test_instagram_stats.py  test_persist.py  test_sheets_io.py  test_users_api.py
src/instamail/: __init__.py  __main__.py  base.py  cli.py  emails.py  loader.py  merge.py  runner.py  writer.py
src/instamail/instagram/: __init__.py  cache.py  plugin.py  resolver.py
tests/: test_base.py  test_cli.py  test_emails.py  test_instagram_cache.py  test_instagram_harvester.py  test_instagram_metrics.py  test_instagram_plugin.py  test_instagram_resolver.py  test_loader.py  test_merge.py  test_runner.py  test_smoke.py  test_writer.py
tests/fixtures/: email_a.py  email_b.py  phone_a.py  raiser.py  violator.py
tests/fixtures/pkg_plugin/: __init__.py  plugin.py
