[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "instamail"
version = "0.1.0"
description = "Pluggable OSINT email-enrichment CLI"
requires-python = ">=3.14"
dependencies = ["email-validator>=2", "curl_cffi>=0.7"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
instamail = "instamail.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "plugins"]
pythonpath = ["plugins"]
